# auth-ms-fastapi

./: README.md  compose.yml  estructura_carpetas.txt
auth-ms/: Dockerfile  main.py  pyproject.toml  requirements.txt
auth-ms/config/: database_config.py
auth-ms/core/: jwt_helper.py
auth-ms/domain/models/: user.py
auth-ms/domain/services/: user_service.py
auth-ms/infrastructure/database/: session.py
auth-ms/infrastructure/repositories/: user_repository.py
auth-ms/interfaces/api/v1/routers/: auth.py  user.py
auth-ms/interfaces/api/v1/schemas/: auth_schema.py  user_schema.py
databases/auth-db/: init.sql
